# Fontys-projects

./: .gitmodules  README.md
Brainstorm/: README.md  platformio.ini
Brainstorm/src/: main.cpp  pin layout.md
GAI - Delta/: .gitignore  README.md  app.py  data.py  pyproject.toml
GAI - Delta/templates/: index.html  pokemon.html
Greenhouse/: .gitignore  app.py  arduino.py  create_data.py
Greenhouse/static/: history.js  style.css
Greenhouse/templates/: history.html  home.html
Pizzeria website/: .gitignore  README.md  oven.py  pizzas.json
Pizzeria website/static/styles/: cashier.css  customer_page.css
Pizzeria website/templates/: cashier.html  customer_page.html  home.html
Pizzeria website/templates/authentication/: forgot-password.html  signup.html
flask/: create_data.py  data.csv
flask/templates/: home.html
pcb15-04-pizza/: app.py  auth.py  models.py  oven server.py  utils.py
pcb15-04-pizza/static/styles/: base.css  chef-space.css  log-sign.css  profile.css
pcb15-04-pizza/templates/: admin.html  arduino.html  base.html  chef-space.html  payment_page.html  tracker_page.html
pcb15-04-pizza/templates/authentication/: login.html  profile.html
