[tool.poetry]
name = "gai"
version = "0.1.0"
description = ""
authors = ["Alexander Popov <alexander.popov233@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
numpy = "^2.2.2"
tabulate = "^0.9.0"
flask = "^3.1.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
